--- a/DogeWalletC/MainPage.xaml
+++ b/DogeWalletC/MainPage.xaml
@@ -1,11 +1,12 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="DogeWalletC.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:ec="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions"
+    x:Class="DogeWalletC.MainPage"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -13,6 +14,11 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="MouseLeftButtonDown">
+            <ec:NavigateToPageAction TargetPage="/receive.xaml"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -20,6 +26,13 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <!--Uncomment to see an alignment grid to help ensure your controls are
+            aligned on common boundaries.  The image has a top margin of -32px to
+            account for the System Tray. Set this to 0 (or remove the margin altogether)
+            if the System Tray is hidden.
+
+            Before shipping remove this XAML and the image itself.-->
+        <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="Multipass" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
@@ -38,75 +51,75 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
+
             <TextBlock HorizontalAlignment="left" 
-                       TextWrapping="Wrap" 
-                       Text="Dogecoin"
-                       FontSize="35"
-                       VerticalAlignment="center"
-                       Tap="Dogecoin_Tap" Margin="0,0,0,0"/>
+				TextWrapping="Wrap" 
+				Text="Dogecoin"
+				FontSize="35"
+				VerticalAlignment="center"
+				Tap="Dogecoin_Tap" Margin="0,0,0,0"/>
             <TextBlock
-                HorizontalAlignment="Left" 
-            	TextWrapping="Wrap" 
-            	Text="Bitcoin"
-            	FontSize="35"
-            	VerticalAlignment="center"
-                Margin="0,0,0,0"
-                       Tap="Bitcoin_Tap" Grid.Row="1"/>
+				HorizontalAlignment="Left" 
+				TextWrapping="Wrap" 
+				Text="Bitcoin"
+				FontSize="35"
+				VerticalAlignment="center"
+				Margin="0,0,0,0"
+				Tap="Bitcoin_Tap" Grid.Row="1"/>
             <TextBlock
-                HorizontalAlignment="Left" 
-            	TextWrapping="Wrap" 
-            	Text="Litecoin"
-            	FontSize="35"
-            	VerticalAlignment="center" Margin="0,0,0,0"
-                       Tap="Litecoin_Tap" Grid.Row="2"/>
+				HorizontalAlignment="Left" 
+				TextWrapping="Wrap" 
+				Text="Litecoin"
+				FontSize="35"
+				VerticalAlignment="center" Margin="0,0,0,0"
+				Tap="Litecoin_Tap" Grid.Row="2"/>
             <TextBlock x:Name="DogecoinBalance"
-                HorizontalAlignment="right"
-                       Margin="0,0,0,0"
-                       TextWrapping="Wrap"
-                       Text="Set API Key"
-                       VerticalAlignment="top"
-                       FontSize="35" Grid.Column="1"/>
-            <TextBlock Name="DogeUnconfirmedBalance"
-                       Grid.Column="1"
-                       Grid.Row="0"
-                       VerticalAlignment='Bottom'
-                       Text="Unconfirmed"
-                       Margin="0,0,0,0"
-                       HorizontalAlignment="Right"
-                       FontSize="30"
+				HorizontalAlignment="right"
+				Margin="0,0,0,0"
+				TextWrapping="Wrap"
+				Text="Set API Key"
+				VerticalAlignment="top"
+				FontSize="35" Grid.Column="1"/>
+            <TextBlock x:Name="DogeUnconfirmedBalance"
+				Grid.Column="1"
+				Grid.Row="0"
+				VerticalAlignment='Bottom'
+				Text="Unconfirmed"
+				Margin="0,0,0,0"
+				HorizontalAlignment="Right"
+				FontSize="30"
                        />
             <TextBlock x:Name="BitcoinBalance"
-                HorizontalAlignment="right"
-                       Margin="0,0,0,0"
-                       TextWrapping="Wrap"
-                       Text="Set API Key"
-                       VerticalAlignment="top"
-                       FontSize="35" Grid.Column="1" Grid.Row="1"/>
-            <TextBlock Name="BitUnconfirmedBalance"
-                       Grid.Column="1"
-                       Grid.Row="1"
-                       VerticalAlignment='Bottom'
-                       Text="Unconfirmed"
-                       Margin="0,0,0,0"
-                       HorizontalAlignment="Right"
-                       FontSize="30"
+				HorizontalAlignment="right"
+				Margin="0,0,0,0"
+				TextWrapping="Wrap"
+				Text="Set API Key"
+				VerticalAlignment="top"
+				FontSize="35" Grid.Column="1" Grid.Row="1"/>
+            <TextBlock x:Name="BitUnconfirmedBalance"
+				Grid.Column="1"
+				Grid.Row="1"
+				VerticalAlignment='Bottom'
+				Text="Unconfirmed"
+				Margin="0,0,0,0"
+				HorizontalAlignment="Right"
+				FontSize="30"
                        />
             <TextBlock x:Name="LitecoinBalance"
-                HorizontalAlignment="right"
-                       Margin="0,0,0,0"
-                       TextWrapping="Wrap"
-                       Text="Set API Key"
-                       VerticalAlignment="Top"
-                       FontSize="35" Grid.Column="1" Grid.Row="2"/>
-            <TextBlock Name="LiteUnconfirmedBalance"
-                       Grid.Column="1"
-                       Grid.Row="2"
-                       VerticalAlignment='Bottom'
-                       Text="Unconfirmed"
-                       Margin="0,0,0,0"
-                       HorizontalAlignment="Right"
-                       FontSize="30"
+				HorizontalAlignment="right"
+				Margin="0,0,0,0"
+				TextWrapping="Wrap"
+				Text="Set API Key"
+				VerticalAlignment="Top"
+				FontSize="35" Grid.Column="1" Grid.Row="2"/>
+            <TextBlock x:Name="LiteUnconfirmedBalance"
+				Grid.Column="1"
+				Grid.Row="2"
+				VerticalAlignment='Bottom'
+				Text="Unconfirmed"
+				Margin="0,0,0,0"
+				HorizontalAlignment="Right"
+				FontSize="30"
                        />
             <!--<Button Content=" Send " HorizontalAlignment="Left" Margin="0,364,0,0" VerticalAlignment="Top" Width="150"/>
             <Button Content="Receive" HorizontalAlignment="Left" Margin="156,364,0,0" VerticalAlignment="Top" Width="150"/>
@@ -116,13 +129,6 @@
 
         </Grid>
 
-        <!--Uncomment to see an alignment grid to help ensure your controls are
-            aligned on common boundaries.  The image has a top margin of -32px to
-            account for the System Tray. Set this to 0 (or remove the margin altogether)
-            if the System Tray is hidden.
-
-            Before shipping remove this XAML and the image itself.-->
-        <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
     </Grid>
 
 </phone:PhoneApplicationPage>
