--- a/DogeWalletC/MainPage.xaml
+++ b/DogeWalletC/MainPage.xaml
@@ -35,7 +35,7 @@
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="Multipass" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
+            <TextBlock Text="MultiWallet" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
             <TextBlock Text="balance" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
@@ -78,9 +78,9 @@
 				Margin="0,0,0,0"
 				TextWrapping="Wrap"
 				Text="Set API Key"
-				VerticalAlignment="top"
+				VerticalAlignment="Center"
 				FontSize="35" Grid.Column="1"/>
-            <TextBlock x:Name="DogeUnconfirmedBalance"
+            <!--<TextBlock x:Name="DogeUnconfirmedBalance"
 				Grid.Column="1"
 				Grid.Row="0"
 				VerticalAlignment='Bottom'
@@ -88,15 +88,15 @@
 				Margin="0,0,0,0"
 				HorizontalAlignment="Right"
 				FontSize="30"
-                       />
+                       />-->
             <TextBlock x:Name="BitcoinBalance"
 				HorizontalAlignment="right"
 				Margin="0,0,0,0"
 				TextWrapping="Wrap"
 				Text="Set API Key"
-				VerticalAlignment="top"
+				VerticalAlignment="Center"
 				FontSize="35" Grid.Column="1" Grid.Row="1"/>
-            <TextBlock x:Name="BitUnconfirmedBalance"
+            <!--<TextBlock x:Name="BitUnconfirmedBalance"
 				Grid.Column="1"
 				Grid.Row="1"
 				VerticalAlignment='Bottom'
@@ -104,15 +104,15 @@
 				Margin="0,0,0,0"
 				HorizontalAlignment="Right"
 				FontSize="30"
-                       />
+                       />-->
             <TextBlock x:Name="LitecoinBalance"
 				HorizontalAlignment="right"
 				Margin="0,0,0,0"
 				TextWrapping="Wrap"
 				Text="Set API Key"
-				VerticalAlignment="Top"
+				VerticalAlignment="Center"
 				FontSize="35" Grid.Column="1" Grid.Row="2"/>
-            <TextBlock x:Name="LiteUnconfirmedBalance"
+            <!--<TextBlock x:Name="LiteUnconfirmedBalance"
 				Grid.Column="1"
 				Grid.Row="2"
 				VerticalAlignment='Bottom'
@@ -120,7 +120,7 @@
 				Margin="0,0,0,0"
 				HorizontalAlignment="Right"
 				FontSize="30"
-                       />
+                       />-->
             <!--<Button Content=" Send " HorizontalAlignment="Left" Margin="0,364,0,0" VerticalAlignment="Top" Width="150"/>
             <Button Content="Receive" HorizontalAlignment="Left" Margin="156,364,0,0" VerticalAlignment="Top" Width="150"/>
             <Button Content="Refresh" HorizontalAlignment="Left" Margin="306,364,0,0" VerticalAlignment="Top" Width="150" Click="Button_Click_Refresh"/>
