--- a/DogeWalletC/shift.xaml
+++ b/DogeWalletC/shift.xaml
@@ -14,6 +14,20 @@
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
+    <phone:PhoneApplicationPage.Resources>
+        <DataTemplate x:Name="modulePickerItemTemplate">
+            <StackPanel>
+                <TextBlock Text="{Binding currency}"/>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Name="modulePickerFullItemTemplate">
+            <StackPanel>
+                <TextBlock Text="{Binding currency}"
+                           FontSize="45"/>
+            </StackPanel>
+        </DataTemplate>
+    </phone:PhoneApplicationPage.Resources>
+
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -41,10 +55,15 @@
                                 Margin="12,37,12,24"  
                                 VerticalAlignment="Center"
                                 SelectionChanged="SendCurrency_SelectionChanged"
-                                Grid.Row="0">
-                <toolkit:ListPickerItem x:Name="Doge" Content="Dogecoin"/>
+                                Grid.Row="0"
+                                ExpansionMode="FullScreenOnly"
+                                FullModeHeader="Pick Currency to Send"
+                                FullModeItemTemplate="{Binding modulePickerFullItemTemplate}" 
+                    ItemTemplate="{Binding modulePickerItemTemplate}">
+                <!--<toolkit:ListPickerItem x:Name="Doge" Content="Dogecoin"/>
                 <toolkit:ListPickerItem x:Name="Bit" Content="Bitcoin"/>
-                <toolkit:ListPickerItem x:Name="Lite" Content="Litecoin"/>
+                <toolkit:ListPickerItem x:Name="Lite" Content="Litecoin"/>-->
+                
             </toolkit:ListPicker>
             <TextBlock
                 Name="WhichToSend"
@@ -58,10 +77,14 @@
                                 Margin="12,37,12,25"  
                                 VerticalAlignment="Center"
                                 SelectionChanged="ReceiveCurrency_SelectionChanged"
-                                Grid.Row="1">
-                <toolkit:ListPickerItem x:Name="Bit2" Content="Bitcoin"/>
+                                Grid.Row="1"
+                                ExpansionMode="FullScreenOnly"
+                                FullModeHeader="Pick Currency to Send"
+                                FullModeItemTemplate="{Binding modulePickerFullItemTemplate}" 
+                    ItemTemplate="{Binding modulePickerItemTemplate}">
+                <!--<toolkit:ListPickerItem x:Name="Bit2" Content="Bitcoin"/>
                 <toolkit:ListPickerItem x:Name="Doge2" Content="Dogecoin"/>
-                <toolkit:ListPickerItem x:Name="Lite2" Content="Litecoin"/>
+                <toolkit:ListPickerItem x:Name="Lite2" Content="Litecoin"/>-->
             </toolkit:ListPicker>
 
             <TextBlock
