--- a/DogeWalletC/shift.xaml
+++ b/DogeWalletC/shift.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:local='clr-namespace:DogeWalletC.Resources'
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -15,17 +16,13 @@
     shell:SystemTray.IsVisible="True">
 
     <phone:PhoneApplicationPage.Resources>
+        <!--<local:Currency x:Key="Currency"/>-->
         <DataTemplate x:Name="modulePickerItemTemplate">
             <StackPanel>
                 <TextBlock Text="{Binding currency}"/>
             </StackPanel>
         </DataTemplate>
-        <DataTemplate x:Name="modulePickerFullItemTemplate">
-            <StackPanel>
-                <TextBlock Text="{Binding currency}"
-                           FontSize="72"/>
-            </StackPanel>
-        </DataTemplate>
+        
     </phone:PhoneApplicationPage.Resources>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -58,7 +55,7 @@
                                 Grid.Row="0"
                                 ExpansionMode="FullScreenOnly"
                                 FullModeHeader="Pick Currency to Send"
-                                FullModeItemTemplate="{Binding modulePickerFullItemTemplate}" 
+                                FullModeItemTemplate="{Binding PickerFullItemTemplate}" 
                     ItemTemplate="{Binding modulePickerItemTemplate}">
                 <!--<toolkit:ListPickerItem x:Name="Doge" Content="Dogecoin"/>
                 <toolkit:ListPickerItem x:Name="Bit" Content="Bitcoin"/>
@@ -80,7 +77,7 @@
                                 Grid.Row="1"
                                 ExpansionMode="FullScreenOnly"
                                 FullModeHeader="Pick Currency to Send"
-                                FullModeItemTemplate="{Binding modulePickerFullItemTemplate}" 
+                                FullModeItemTemplate="{Binding PickerFullItemTemplate}" 
                     ItemTemplate="{Binding modulePickerItemTemplate}">
                 <!--<toolkit:ListPickerItem x:Name="Bit2" Content="Bitcoin"/>
                 <toolkit:ListPickerItem x:Name="Doge2" Content="Dogecoin"/>
