--- a/DogeWalletC/settings.xaml
+++ b/DogeWalletC/settings.xaml
@@ -22,7 +22,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="CryptoWallet" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="MultiWallet" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock Text="settings" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
