--- a/DogeWalletC/send.xaml
+++ b/DogeWalletC/send.xaml
@@ -23,20 +23,20 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="SEND" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="MULTIWALLET" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
+            <TextBlock Text="send" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2.2*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <toolkit:ListPicker x:Name="CurrencyPicker" Margin="12,12,12,0"  
+            <toolkit:ListPicker x:Name="CurrencyPicker" Margin="12,0,12,12"  
                                 SelectionChanged="CurrencyPicker_SelectionChanged"
                                 Grid.Row="0">
                 <toolkit:ListPickerItem x:Name="Doge" Content="Dogecoin"/>
