--- a/DogeWalletC/credits.xaml
+++ b/DogeWalletC/credits.xaml
@@ -37,8 +37,9 @@
             <TextBlock HorizontalAlignment="Left"
                        Margin="10,64,0,0"
                        TextWrapping="Wrap"
-                       Text="Version: 1.1.2"
-                       VerticalAlignment="Top"/>
+                       Text="Version:"
+                       VerticalAlignment="Top"
+                       x:Name="Version"/>
             <TextBlock HorizontalAlignment="Left"
                        Margin="10,91,0,0"
                        TextWrapping="Wrap"
