--- a/DogeWalletC/MainPage.xaml
+++ b/DogeWalletC/MainPage.xaml
@@ -141,7 +141,7 @@
 				HorizontalAlignment="Right"
 				FontSize="30"
                        />
-            <TextBlock
+            <!--<TextBlock
                 Grid.Row="3"
                 Text="If you are experencing crashes please go to the credits page and tap feedback to send an email directly to me. Include phone type, firmware version, and OS version"
                 TextWrapping="Wrap"
@@ -153,7 +153,7 @@
                 TextWrapping="Wrap"
                 Text="All the information can be found in the 'about' page in 'settings'"
                 VerticalAlignment="Center"
-                />
+                />-->
             
             <!--<Button Content=" Send " HorizontalAlignment="Left" Margin="0,364,0,0" VerticalAlignment="Top" Width="150"/>
             <Button Content="Receive" HorizontalAlignment="Left" Margin="156,364,0,0" VerticalAlignment="Top" Width="150"/>
