--- a/DogeWalletC/settings.xaml
+++ b/DogeWalletC/settings.xaml
@@ -104,6 +104,17 @@
                        VerticalAlignment="Top"
                        HorizontalAlignment="Center"
                        Margin="0,25,0,0"/>
+            <TextBlock Text="If you don't have a Block.io account, get one here"
+                       Grid.Row="4"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Center"
+                       Margin="0,60,0,0"/>
+            <Button Name="BlockButton"
+                    Content="Block.io"
+                    Click="Block_Click"
+                    Grid.Row="4"
+                    VerticalAlignment="Bottom"
+                    Margin="0,0,0,10"/>
             
 
         </Grid>
