Changed some xaml

--- a/DogeWalletC/MainPage.xaml
+++ b/DogeWalletC/MainPage.xaml
@@ -97,14 +97,14 @@
 				HorizontalAlignment="right"
 				Margin="0,0,0,0"
 				TextWrapping="Wrap"
-				Text="Set API Key"
+				Text="0 Ð"
 				VerticalAlignment="Top"
 				FontSize="35" Grid.Column="1"/>
             <TextBlock x:Name="DogeUnconfirmedBalance"
 				Grid.Column="1"
 				Grid.Row="0"
 				VerticalAlignment='Bottom'
-				Text="Unconfirmed"
+				Text="0 Ð"
 				Margin="0,0,0,0"
 				HorizontalAlignment="Right"
 				FontSize="30"
@@ -113,14 +113,14 @@
 				HorizontalAlignment="right"
 				Margin="0,0,0,0"
 				TextWrapping="Wrap"
-				Text="Set API Key"
+				Text="0 ฿"
 				VerticalAlignment="Top"
 				FontSize="35" Grid.Column="1" Grid.Row="1"/>
             <TextBlock x:Name="BitUnconfirmedBalance"
 				Grid.Column="1"
 				Grid.Row="1"
 				VerticalAlignment='Bottom'
-				Text="Unconfirmed"
+				Text="0 ฿"
 				Margin="0,0,0,0"
 				HorizontalAlignment="Right"
 				FontSize="30"
@@ -129,14 +129,14 @@
 				HorizontalAlignment="right"
 				Margin="0,0,0,0"
 				TextWrapping="Wrap"
-				Text="Set API Key"
+				Text="0 Ł"
 				VerticalAlignment="Top"
 				FontSize="35" Grid.Column="1" Grid.Row="2"/>
             <TextBlock x:Name="LiteUnconfirmedBalance"
 				Grid.Column="1"
 				Grid.Row="2"
 				VerticalAlignment='Bottom'
-				Text="Unconfirmed"
+				Text="0 Ł"
 				Margin="0,0,0,0"
 				HorizontalAlignment="Right"
 				FontSize="30"
