--- a/MultiWallet v1/DogeWalletC/MainPage.xaml
+++ b/MultiWallet v1/DogeWalletC/MainPage.xaml
@@ -15,7 +15,7 @@
     shell:SystemTray.IsVisible="True">
 
     <i:Interaction.Triggers>
-        
+
     </i:Interaction.Triggers>
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -71,7 +71,7 @@
 				FontSize="35"
 				VerticalAlignment="Top" Margin="0,0,0,0"
 				Grid.Row="2"/>
-            
+
             <TextBlock
                 HorizontalAlignment="Left"
                 Grid.Row="0"
@@ -141,6 +141,16 @@
 				HorizontalAlignment="Right"
 				FontSize="30"
                        />
+            <ProgressBar x:Name="ProgressBar"
+                         Visibility="Visible"
+                         HorizontalAlignment="Stretch"
+                         IsEnabled="False"
+                         IsIndeterminate="True"
+                         Height="4"
+                         Margin="0,10,0,0"
+                         Grid.Row="3"
+                         VerticalAlignment="Top"
+                         Grid.ColumnSpan="2"/>
             <!--<TextBlock
                 Grid.Row="3"
                 Text="If you are experencing crashes please go to the credits page and tap feedback to send an email directly to me. Include phone type, firmware version, and OS version"
@@ -154,7 +164,7 @@
                 Text="All the information can be found in the 'about' page in 'settings'"
                 VerticalAlignment="Center"
                 />-->
-            
+
             <!--<Button Content=" Send " HorizontalAlignment="Left" Margin="0,364,0,0" VerticalAlignment="Top" Width="150"/>
             <Button Content="Receive" HorizontalAlignment="Left" Margin="156,364,0,0" VerticalAlignment="Top" Width="150"/>
             <Button Content="Refresh" HorizontalAlignment="Left" Margin="306,364,0,0" VerticalAlignment="Top" Width="150" Click="Button_Click_Refresh"/>
