--- a/MultiWallet v1/DogeWalletC/receive.xaml
+++ b/MultiWallet v1/DogeWalletC/receive.xaml
@@ -31,15 +31,16 @@
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height=".5*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
             <Image x:Name="QRImageHolder"
                    Source=""
                    HorizontalAlignment="Center"
                    Height="200"
-                   Margin="0,75,0,0"
+                   Margin="0,50,0,50"
                    VerticalAlignment="Top"
                    Width="200"
                    Grid.Row="1"/>
@@ -64,7 +65,7 @@
                      VerticalAlignment="Bottom"
                      Width="456"
                      IsReadOnly="True"
-                     Grid.Row="1"/>
+                     Grid.Row="2"/>
             <Button Content="New Address"
                     HorizontalAlignment="Center"
                     Margin="0,0,0,0"
